[gd_scene load_steps=4 format=3 uid="uid://by276q5li4uq4"]

[ext_resource type="Script" path="res://scripts/levels/locations/objects/ExitArea.gd" id="1_m4opa"]
[ext_resource type="Texture2D" uid="uid://bwgxsltfsteal" path="res://icon.svg" id="2_u18ic"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ecujl"]
size = Vector2(320, 87)

[node name="ExitArea" type="Area2D"]
script = ExtResource("1_m4opa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(97, 19.5)
shape = SubResource("RectangleShape2D_ecujl")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(96.5, 21)
scale = Vector2(2.50781, 0.671875)
texture = ExtResource("2_u18ic")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
